--- a/.forestry/front_matter/templates/homepage.yml
+++ b/.forestry/front_matter/templates/homepage.yml
@@ -1,27 +1,29 @@
 ---
 label: homepage
-hide_body: true
-display_field: permalink
 fields:
-- type: textarea
-  name: vistiekaartjetext
-  label: vistiekaartjetext
-  default: vistiekaartjetext
-  config:
-    wysiwyg: true
-    schema:
-      format: html-blocks
-- name: permalink
-  type: text
-  label: Permalink
-  config:
-    required: true
-- name: layout
-  type: text
-  hidden: true
-  label: layout
-  default: homepage
-  config:
-    required: true
-pages:
-- content/pages/homepage.md
+  - type: textarea
+    name: vistiekaartjetext
+    label: vistiekaartjetext
+    default: vistiekaartjetext
+    config:
+      wysiwyg: true
+      schema:
+        format: html-blocks
+  - type: file
+    name: mediumplaatje
+    label: mediumplaatje
+    default: ''
+  - name: permalink
+    type: text
+    label: Permalink
+    config:
+      required: true
+  - name: layout
+    type: text
+    hidden: true
+    label: layout
+    default: homepage
+    config:
+      required: true
+display_field: permalink
+hide_body: true
